--- a/config.ini
+++ b/config.ini
@@ -4,7 +4,7 @@
 #
 
 # Default options: openai, azure
-API_TYPE=azure
+API_TYPE=local
 
 # Check Azure's documentation for updates here:
 # https://learn.microsoft.com/en-us/azure/ai-services/openai/chatgpt-quickstart?tabs=command-line&pivots=programming-language-python
@@ -32,12 +32,17 @@ CACHE_FILE_NAME=openai_api_cache.pickle
 MAX_CONTENT_DISPLAY_LENGTH=1024
 
 [Simulation]
-RAI_HARMFUL_CONTENT_PREVENTION=True
-RAI_COPYRIGHT_INFRINGEMENT_PREVENTION=True
+RAI_HARMFUL_CONTENT_PREVENTION=False
+RAI_COPYRIGHT_INFRINGEMENT_PREVENTION=False
+
+[LocalLLM]
+MODEL_PATH=Meta-Llama-3-8B-Instruct.Q4_0.gguf
+N_THREADS=100
+N_CTX=8192
 
 
 [Logging]
-LOGLEVEL=INFO
+LOGLEVEL=DEBUG
 # ERROR
 # WARNING
 # INFO
